--- a/Dia 2/index.html
+++ b/Dia 2/index.html
@@ -7,35 +7,66 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    
-        <header id="cabecera">
-            <h2 class="subtitulos">Menu de Opciones</h2>
-            <ul>
-                <li>TERROR</li>
-                <li>COMEDIA</li>
-                <li>DRAMA</li>
-                <li>ACCION </li>
-            </ul>
-        </header>
+    <header id="cabecera">
+        <ul>
+            <li>TERROR</li>
+            <li>COMEDIA</li>
+            <li>DRAMA</li>
+            <li>ACCION </li>
+        </ul>
+        <h2 class="subtitulos">Menu de Opciones</h2>
+    </header>
+    <hr>
     <main>
         <h1>EL TERROR DE FUNVAL</h1>
         <p>
         El sitio web donde encontraras las mejores peliculas.
         </p>
-        <hr>
+        <Section>
         <h2 class="subtitulos">TOP 10 MEJORE PELICULAS</h2>
-        <ol>
-            <li>PELICULA 1 </li>
-            <li>PELICULA 2</li>
-            <li>PELICULA 3</li>
-            <li>PELICULA 4</li>
-            <li>PELICULA 5</li>
-            <li>PELICULA 6</li>
-            <li>PELICULA 7</li>
-            <li>PELICULA 8</li>
-            <li>PELICULA 9</li>
-            <li>PELICULA 10</li>
+        <ol class="PRIMERAFILA">
+            <li><h3>Dragon Ball Batalla de los Dioses</h3>
+            <img src="./Imagenes/DRAGONBALL.jpg" alt="imagen cartel cars" height="300px">
+            <p>La batalla de los dioses contra los guerreros z</p>
+            </li>
+            <li><h3>Kimetsu No Yaiba</h3>
+            <img src="./Imagenes/KIMETSU.png" alt="imagen cartel cars"height="300px">
+            <p>Demonios contra cazadores </p>
+            </li>
+            <li><h3>Shingeki No Kioyin</h3>
+            <img src="./Imagenes/SHINGEKI.jpg" alt="imagen cartel cars"height="300px">
+            <p>Shingeki No Kioyin</p>
+            </li>
+            <li><h3>Son como niños</h3>
+            <img src="./Imagenes/COMONIÑOS.jpg" alt="imagen cartel cars"height="300px">
+            <p>Son como niños</p>
+            </li>
+            <li><h3>Toy Story 2</h3>
+            <img src="./Imagenes/TOYSTORY.jpeg" alt="imagen cartel cars"height="300px">
+            <p>Toy Story 2</p>
         </ol>
+        <ol class="PRIMERAFILA">
+            <li><h3>La calabaza magica</h3>
+            <img src="./Imagenes/CALABAZA.jpg" alt="imagen cartel cars"height="300px">
+            <p>La batalla de los dioses contra los guerreros z</p>
+            </li>
+            <li><h3>KUNG GU PANDA 3</h3>
+            <img src="./Imagenes/KUNGFU.jpg" alt="imagen cartel cars"height="300px">
+            <p>UN PANDA CONTRA TODO</p>
+            </li>
+            <li><h3>Minecraft</h3>
+            <img src="./Imagenes/MINECRAFT.jpg" alt="imagen cartel cars"height="300px">
+            <p>MINECRAFT</p>
+            </li>
+            <li><h3>Lilo Y Stich    </h3>
+            <img src="./Imagenes/LILO.jpeg" alt="imagen cartel cars"height="300px">
+            <p>LILO Y STICH</p>
+            </li>
+            <li><h3>OPPENHEIMER</h3>
+            <img src="./Imagenes/OPENHAIMER.jpg" alt="imagen cartel cars"height="300px">
+            <p>OPPENHEIMER</p>
+        </ol>
+    </Section>
     </main>    
 </body>
 </html>
