--- a/index.html
+++ b/index.html
@@ -4,38 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    <header id="cabecera">
-        <ul>
-            <li>TERROR</li>
-            <li>COMEDIA</li>
-            <li>DRAMA</li>
-            <li>ACCION </li>
-        </ul>
-        <h2 class="subtitulos">Menu de Opciones</h2>
-    </header>
-    <hr>
-    <main>
-        <h1>EL TERROR DE FUNVAL</h1>
-        <p>
-        El sitio web donde encontraras las mejores peliculas.
-        </p>
-        
-        <h2 class="subtitulos">TOP 10 MEJORE PELICULAS</h2>
-        <ol>
-            <li>PELICULA 1 </li>
-            <li>PELICULA 2</li>
-            <li>PELICULA 3</li>
-            <li>PELICULA 4</li>
-            <li>PELICULA 5</li>
-            <li>PELICULA 6</li>
-            <li>PELICULA 7</li>
-            <li>PELICULA 8</li>
-            <li>PELICULA 9</li>
-            <li>PELICULA 10</li>
-        </ol>
-    </main>    
+    <a img="./imagen/nota.jpg" href="./pruebapractica2/">AQUI SE ENCUENTRA LA PRACTICA 1</a>
 </body>
 </html>
